--- a/css/index.css
+++ b/css/index.css
@@ -340,3 +340,36 @@ footer p{
         width: 95%;
     }
 }
+
+@media(max-width: 500px) {
+	
+	.navigation header {
+		display: flex;
+		width: 100%
+	}
+	.navigation header nav {
+		display: flex;
+		flex-direction: column;
+		width: 140%;
+	}
+	.navigation header nav a {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding-bottom: 39px;
+		border-bottom: 1px solid black;
+		margin-bottom: 20px;
+		margin-top: 20px
+	}
+	.main-article {
+		margin-top: 565px
+	}
+	.logo-container {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 140%;
+		border-bottom: 1px solid black
+
+	}
+}
